# fish_timer

./: .gitignore
3D/: test.SLDPRT  test.STL
fish_timer_esp32_prj/: CMakeLists.txt  sdkconfig  sdkconfig.old
fish_timer_esp32_prj/components/beep/: CMakeLists.txt  beep_app.c  beep_app.h  beep_driver.c  beep_driver.h
fish_timer_esp32_prj/components/buzzer/: CMakeLists.txt  buzzer_app.c  buzzer_app.h  buzzer_driver.c  buzzer_driver.h
fish_timer_esp32_prj/components/ds18b20/: CMakeLists.txt  ds18b20.c  ds18b20_app.c  ds18b20_app.h  ds18b20_driver.c  ds18b20_driver.h
fish_timer_esp32_prj/components/key/: CMakeLists.txt  key_app.c  key_app.h  key_driver.h
fish_timer_esp32_prj/components/lv_examples/: lv_ex_conf.h
fish_timer_esp32_prj/components/lv_examples/lv_examples/: lv_examples.h
fish_timer_esp32_prj/components/lv_examples/lv_examples/src/lv_demo_benchmark/: lv_demo_benchmark.c
fish_timer_esp32_prj/components/lvgl/: lv_conf.h
fish_timer_esp32_prj/components/lvgl/src/lv_misc/: lv_task.c
fish_timer_esp32_prj/components/sht20/: CMakeLists.txt  sht20.c  sht20_app.c  sht20_app.h  sht20_driver.c  sht20_driver.h
fish_timer_esp32_prj/components/user_iic/: CMakeLists.txt  myiic.c  myiic.h
fish_timer_esp32_prj/components/user_lcd/: CMakeLists.txt  lcd.c  lcd.h  lcd_app.c  lcd_app.h  lcd_driver.c  lcd_driver.h  lcd_font.c
fish_timer_esp32_prj/components/user_timer/: CMakeLists.txt  timer.c  timer.h
fish_timer_esp32_prj/components/user_wifi/: mywifi.c
fish_timer_esp32_prj/main/: CMakeLists.txt  main.c  user_config.h
